--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,74 +1,77 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'org.jetbrains.kotlin.kapt'
+  id 'com.android.application'
+  id 'org.jetbrains.kotlin.android'
+  id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
-    compileSdk 34
+  compileSdk 34
 
-    namespace "dev.dukendev.watchface.binaryradar"
+  namespace "dev.dukendev.watchface.binaryradar"
 
-    defaultConfig {
-        applicationId "dev.dukendev.watchface.binaryradar"
-        minSdk 28
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
+  defaultConfig {
+    applicationId "dev.dukendev.watchface.binaryradar"
+    minSdk 31
+    targetSdk 33
+    versionCode 4
+    versionName "1.1"
+  }
+
+  buildFeatures {
+    viewBinding true
+  }
+
+  buildTypes {
+    debug{
+      minifyEnabled false
     }
-
-    buildFeatures {
-        viewBinding true
+    release {
+      minifyEnabled true
+      proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
     }
+  }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-        }
-    }
+  packagingOptions {
+    exclude "META-INF/atomicfu.kotlin_module"
+  }
 
-    packagingOptions {
-        exclude "META-INF/atomicfu.kotlin_module"
-    }
+  compileOptions {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+  }
 
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_17.majorVersion
-    }
+  kotlinOptions {
+    jvmTarget = JavaVersion.VERSION_17.majorVersion
+  }
 }
 
 dependencies {
-    implementation libs.androidx.core.ktx
+  implementation libs.androidx.core.ktx
 
-    // Kotlin components
-    implementation libs.kotlinx.coroutines.core
-    implementation libs.kotlinx.coroutines.android
+  // Kotlin components
+  implementation libs.kotlinx.coroutines.core
+  implementation libs.kotlinx.coroutines.android
 
-    implementation libs.androidx.activity.ktx
+  implementation libs.androidx.activity.ktx
 
-    // Lifecycle components
-    implementation libs.androidx.lifecycle.runtime.ktx
-    implementation libs.androidx.lifecycle.viewmodel.ktx
+  // Lifecycle components
+  implementation libs.androidx.lifecycle.runtime.ktx
+  implementation libs.androidx.lifecycle.viewmodel.ktx
 
-    // Material components
-    implementation libs.android.material
+  // Material components
+  implementation libs.android.material
 
-    // Wear libraries
-    implementation libs.androidx.wear
+  // Wear libraries
+  implementation libs.androidx.wear
 
-    // Watch face specific libraries
-    implementation libs.wear.watchface.complications.data
-    implementation libs.wear.watchface.complications.data.source
+  // Watch face specific libraries
+  implementation libs.wear.watchface.complications.data
+  implementation libs.wear.watchface.complications.data.source
 
-    implementation libs.wear.watchface
-    implementation libs.wear.watchface.client
-    implementation libs.wear.watchface.complications.rendering
-    implementation libs.wear.watchface.data
-    implementation libs.wear.watchface.editor
-    implementation libs.wear.watchface.style
+  implementation libs.wear.watchface
+  implementation libs.wear.watchface.client
+  implementation libs.wear.watchface.complications.rendering
+  implementation libs.wear.watchface.data
+  implementation libs.wear.watchface.editor
+  implementation libs.wear.watchface.style
 }
