--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,6 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-android.enanleR8=false
-android.enableR8.libraries=false
+android.enableR8.fullMode=false
+
+
