--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,9 +7,11 @@ androidx-wear-compose = "1.1.0-rc01"
 androidx-wear-tiles = "1.1.0"
 androidx-wear-watchface = "1.1.1"
 compose = "1.5.0-beta01"
+google-wearable = "2.9.0"
 ktlint = "0.50.0"
 org-jetbrains-kotlin = "1.9.10"
 org-jetbrains-kotlinx = "1.7.3"
+play-services-wearable = "18.1.0"
 
 [libraries]
 android-lint-gradle = "com.android.tools.lint:lint-gradle:31.1.2"
@@ -20,12 +22,14 @@ androidx-databinding-viewbinding = "androidx.databinding:viewbinding:8.1.2"
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
 androidx-wear = "androidx.wear:wear:1.3.0"
+google-wearable = { module = "com.google.android.wearable:wearable", version.ref = "google-wearable" }
 jacoco-ant = "org.jacoco:org.jacoco.ant:0.8.10"
 kotlin-annotation-processing-gradle = { module = "org.jetbrains.kotlin:kotlin-annotation-processing-gradle", version.ref = "org-jetbrains-kotlin" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "org-jetbrains-kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "org-jetbrains-kotlin" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "org-jetbrains-kotlinx" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "org-jetbrains-kotlinx" }
+play-services-wearable = { module = "com.google.android.gms:play-services-wearable", version.ref = "play-services-wearable" }
 wear-watchface = { module = "androidx.wear.watchface:watchface", version.ref = "androidx-wear-watchface" }
 wear-watchface-client = { module = "androidx.wear.watchface:watchface-client", version.ref = "androidx-wear-watchface" }
 wear-watchface-complications-data = { module = "androidx.wear.watchface:watchface-complications-data", version.ref = "androidx-wear-watchface" }
